--- a/Express/views/new.html
+++ b/Express/views/new.html
@@ -15,6 +15,8 @@
         <input type="text" id="name" name="name"><br>
         <label fot="major">Major:</label><br>
         <input type="text" id="major" name="major"><br>
+        <label fot="gpa">GPA:</label><br>
+        <input type="text" id="gpa" name="gpa"><br>
         <input type="submit" value="Submit">
     </form>
 </body>
