--- a/module7/views/story/show.ejs
+++ b/module7/views/story/show.ejs
@@ -4,7 +4,7 @@
        <small>Posted <%= story.createdAt%> by <%= story.author%></small>
        <div id = "story"><%= story.content%></div>
        <form>
-          <button type = "submit" formmethod = "GET" formaction = "/stories/<%= story.id%>/edit">Edit</button>
+          <button type = "submit" formmethod = "GET" formaction = "/stories/<%= story._id%>/edit">Edit</button>
           <button type = "submit" formmethod = "POST" formaction = "/stories/<%= story.id%>?_method=DELETE">Delete</button>
        </form>
     </div>
