display flash messages as notifications on the front end

--- a/module9/views/partials/header.ejs
+++ b/module9/views/partials/header.ejs
@@ -16,3 +16,13 @@
         <a href='/profile'>Profile</a>
         <a href='/logout'>Logout</a>
     </nav>
+
+    <%if(errorMessages.length > 0) {
+        errorMessages.forEach(message=>{%>
+        <div><%=message%></div>
+            <%}); }%>
+
+    <%if(successMessages.length > 0) {
+        successMessages.forEach(message=>{%>
+        <div><%=message%></div>
+        <%}); }%>
