--- a/module9/views/partials/header.ejs
+++ b/module9/views/partials/header.ejs
@@ -3,8 +3,9 @@
 
 <head>
     <meta charset="UTF-8">
+    <link rel="stylesheet" href="/css/style.css">
     <title>
-        Log In
+        Log In 
     </title>
 </head>
 
@@ -19,10 +20,10 @@
 
     <%if(errorMessages.length > 0) {
         errorMessages.forEach(message=>{%>
-        <div><%=message%></div>
+        <div class = 'error'> <%=message%> </div>
             <%}); }%>
 
     <%if(successMessages.length > 0) {
         successMessages.forEach(message=>{%>
-        <div><%=message%></div>
+        <div class = 'success'> <%=message%> </div>
         <%}); }%>
