--- a/module10/views/partials/header.ejs
+++ b/module10/views/partials/header.ejs
@@ -11,10 +11,14 @@
         <a href='/'>Home</a>
         <a href='/stories'>Stories</a>
         <a href='/stories/new'>Create a New Story</a>
+        
+        <%if(!user) {%>
         <a href='/users/new'>Sign Up</a>
         <a href='/users/login'>Login</a>
+        <%} else {%>
         <a href='/users/profile'>Profile</a>
         <a href='/users/logout'>Logout</a>
+        <%}%>
     </nav>
     </nav>
 
