implemented username case insensitive, password strength and requirements, and bcrpyt passwords

--- a/module11/views/user/login.ejs
+++ b/module11/views/user/login.ejs
@@ -9,7 +9,7 @@
             </tr>
             <tr>
                 <td><label for="password">Password</label></td>
-                <td><input type="password" id="password" name="password" class = "fixed-width" required></td>
+                <td><input type="password" id="password" name="password" class = "fixed-width" minlength="8" maxlength="64" required></td>
             </tr>
             
             <tr>
