--- a/module11/views/user/new.ejs
+++ b/module11/views/user/new.ejs
@@ -18,7 +18,7 @@
             </tr>
             <tr>
                 <td><label for="password">Password</label></td>
-                <td><input type="password" id="password" name="password" class = "fixed-width" minlength="8" required></td>
+                <td><input type="password" id="password" name="password" class = "fixed-width" minlength="8" maxlength="64" required></td>
             </tr>
             
             <tr>
